@@ -43,6 +43,9 @@ Version 2.1.3
    - Bugfix/Feature: New option "file_restore_atime". Note: This results in a
         changed default behavior!
    - Updates in "ui/preferences.glade" to make translating easier
+   - Bugfix: Monitoring the correct directory by FAM (maildir; thanks to
+        Alexis S. L. Carvalho for reporting this and previous maildir bugs)
+   - Bugfix: Reading messages (mh)
 
 Version 2.1.2		2005-03-26 17:28
  * Robert Sowada
